# goph419-f2023-lab00-stEG

./: README.md  pyproject.toml
examples/: driver.py
src/my_python_package/: operators.py
